# TanksGame

./: Barrel.cpp  Barrel.h  BarrelL.cpp  BarrelL.h  BarrelR.cpp  BarrelR.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Game.cpp  Game.h  GameFunctions.cpp  GameFunctions.h  GameFunctions_UnitTests.cpp  Ground.cpp  Ground.h  ProjectileMotion.cpp  ProjectileMotion.hpp  ProjectileMotionEquations.cpp  ProjectileMotionEquations.hpp  ProjectileMotionEquations_UnitTests.cpp  Tank.cpp  Tank.h  TankL.cpp  TankL.h  TankR.cpp  TankR.h  add_bullet_position_componants_together_from_game_class.cpp  calculate_correction_position_from_game_class.cpp  calculate_new_position.cpp  calculate_new_velocity.cpp  calculate_vector_velocity.cpp  degrees_to_radians_conversion.cpp  gamevisual.cpp  gamevisual.h  gamevisual.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  (+7 more)
icons/: icons.qrc  icons.qrc.autosave
